# ufw_ui_manager_api

./: .env.example  Makefile  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/templates/custom/: script.py.mako
ufw_ui_manager_api/: __init__.py  router.py
ufw_ui_manager_api/api/: __init__.py  routes.py  ufw_rules.py
ufw_ui_manager_api/api/repository/: db.py  tables.py
ufw_ui_manager_api/api/settings/: __init__.py
ufw_ui_manager_api/api/utils/: tracer.py
